// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses messages including "Error while running external preprocessor" 1`] = `
Object {
  "file:///Users/bla/Development/sandbox/reason-react-hello/src/simple/bla.re": Array [
    Object {
      "code": "",
      "message": "2543: The switch expression isn't closed.",
      "range": Object {
        "end": Object {
          "character": 37,
          "line": 13,
        },
        "start": Object {
          "character": 36,
          "line": 13,
        },
      },
      "severity": 1,
      "source": "bucklescript",
    },
  ],
}
`;

exports[`parses messages including "Error: 1087: Expecting one of the following" 1`] = `
Object {
  "file:///Users/bla/Development/github/the-super-tiny-compiler/src/compiler.re": Array [
    Object {
      "code": "",
      "message": "1087: Expecting one of the following:
  - \\"|\\" to open the next pattern
  - \\"=>\\" to start the body of the matched pattern
  - \\"when\\" to start a contitional guard for the previous pattern",
      "range": Object {
        "end": Object {
          "character": 14,
          "line": 497,
        },
        "start": Object {
          "character": 13,
          "line": 497,
        },
      },
      "severity": 1,
      "source": "bucklescript",
    },
  ],
}
`;

exports[`parses messages including "Unused bucklescript attribute" 1`] = `
Object {
  "file:///Users/bla/Development/sandbox/my-first-app/src/Demo.re": Array [
    Object {
      "code": "",
      "message": "Unused bucklescript attribute: bs.as",
      "range": Object {
        "end": Object {
          "character": 11,
          "line": 6,
        },
        "start": Object {
          "character": 6,
          "line": 6,
        },
      },
      "severity": 1,
      "source": "bucklescript",
    },
  ],
}
`;

exports[`parses messages including "can't be found" strings 1`] = `
Object {
  "file:///Users/bla/Development/sandbox/reason-hello/src/a.re": Array [
    Object {
      "code": "",
      "message": "  The value lfdsog can't be found in Js

",
      "range": Object {
        "end": Object {
          "character": 9,
          "line": 4,
        },
        "start": Object {
          "character": 0,
          "line": 4,
        },
      },
      "severity": 1,
      "source": "bucklescript",
    },
  ],
}
`;

exports[`parses messages including interface/implementation mismatch 1`] = `
Object {
  "file:///Users/bla/Development/github/bs-bn.js/src/Bn.re": Array [
    Object {
      "code": "",
      "message": "The implementation src/Bn.mlast
     does not match the interface src/bn.cmi:
     The value \`toString' is required but not provided

",
      "range": Object {
        "end": Object {
          "character": 0,
          "line": 0,
        },
        "start": Object {
          "character": 0,
          "line": 0,
        },
      },
      "severity": 1,
      "source": "bucklescript",
    },
  ],
}
`;

exports[`parses messages including multiple errors 1`] = `
Object {
  "file:///Users/bla/Development/sandbox/reason-hello/src/a.re": Array [
    Object {
      "code": "",
      "message": "  Unbound value astsdfNode

Hint: Did you mean astNode?

",
      "range": Object {
        "end": Object {
          "character": 17,
          "line": 1,
        },
        "start": Object {
          "character": 7,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "bucklescript",
    },
  ],
  "file:///Users/bla/Development/sandbox/reason-hello/src/demo.re": Array [
    Object {
      "code": "",
      "message": "  Unbound value pattesdfrnMatch

Hint: Did you mean patternMatch?

",
      "range": Object {
        "end": Object {
          "character": 23,
          "line": 58,
        },
        "start": Object {
          "character": 8,
          "line": 58,
        },
      },
      "severity": 1,
      "source": "bucklescript",
    },
  ],
}
`;
